# StreamBenchmark

./: README.md  cleanAll.sh  compileAll.sh  runAll  runAll1Socket  runAllBW
plots/: resultsMachineShop.ods
plots/StreamCopyResults/: createPlot.sh  plot.gnp  plotRatio.gnp
plots/StreamResults/: createPlot.sh  createPlotFull.sh  plot.gnp  plotRatio.gnp
plots/streamResults/: dunkel.gnp  porter.gnp  stout.gnp
streamMPI_sm/: CMakeLists.txt  runTest.sh  runTest1Socket.sh  runTestBW.sh
streamMPI_sm/src/: streamMPI_sm.c
streamOpenMP/: CMakeLists.txt  runAll  runAll1Socket  runTest.sh  runTest1Socket.sh  runTestBW.sh
streamOpenMP/src/: streamOpenMP.c  stream_Original.c
